# bazel-basics

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  requirements.in  requirements.txt
src/python/bar-project/: pyproject.toml
src/python/foo-project/: BUILD.bazel  main.py  pyproject.toml  tests.py
src/python/foo-project/tests/: test_foo_project.py
tools/pytest/: BUILD.bazel  defs.bzl
